--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cvitezslav</groupId>
     <artifactId>businessdata</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+    </properties>
 
 </project>
